--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
     <string name="app_name">Todo App</string>
+
+    <!-- LoginActivity -->
+    <string name="email">E-mail</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="register">Register</string>
+    <string name="login_failed">Login failed!</string>
+
+    <!-- RegisterActivity -->
+    <string name="repeat_password">Repeat password</string>
+    <string name="empty_email">Please enter a valid E-mail address</string>
+    <string name="empty_password">Please enter a password</string>
+    <string name="empty_repeat_password">Please repeat the password</string>
+    <string name="no_password_match">The password\'s don\'t match</string>
+    <string name="register_success">Account created!</string>
+
+
 </resources>
