--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="login">Login</string>
     <string name="register">Register</string>
     <string name="login_failed">Login failed!</string>
+    <string name="stay_logged_in">Stay logged in</string>
 
     <!-- RegisterActivity -->
     <string name="repeat_password">Repeat password</string>
